--- a/form-generator/rendering/IRI_input.html
+++ b/form-generator/rendering/IRI_input.html
@@ -1,24 +1,51 @@
-<div><i>Please enter the URI of the existing entry.</i></div>
-<input data-label='{{ property["name"] }}' data-property-id='{{ property["id"] }}' name='{{ property["id"] }}' type='text'
-{%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'
-{%- else %} pattern='<?\w+:(\/?\/?)[^\s]+>?' title='Must be in URI format.'
+{%- if 'in' in property %}
+<select data-property-id='{{ property["id"] }}' name='{{ property["id"] }}
+    {%- if "hasValue" in property %}-0
+    {%- endif %}' data-label='{{ property["name"] }}'
+    {%- if disabled == True %} disabled
+    {%- endif %}
+    {%- if 'equals' in property %} data-equalTo='{{ property["equals"] }}'
+    {%- endif %}
+    {%- if 'disjoint' in property %} data-notEqualTo='{{ property["disjoint"] }}'
+    {%- endif %}
+    {%- if 'lessThan' in property %} lessThan='{{ property["lessThan"] }}'
+    {%- endif %}
+    {%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property["lessThanOrEquals"] }}'
+    {%- endif %}
+    {%- if hidden == True %} hidden
+    {%- endif %}
+    {%- if 'hasValue' in property %}>
+    <option value='{{ property["hasValue"] }}' selected>{{ property['hasValue'] }}</option>
+    {%- else %}>
+        {%- for option in property['in'] %}
+    <option value='{{ option }}'
+            {%- if 'defaultValue' in property and property['defaultValue'] == option %} selected
+            {%- endif %}>{{ option }}</option>
+        {%- endfor %}
+    {%- endif %}
+</select>
+{%- else %}
+    <input data-label='{{ property["name"] }}' data-property-id='{{ property["id"] }}' name='{{ property["id"] }}' type='text'
+    {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'
+    {%- else %} pattern='<?\w+:(\/?\/?)[^\s]+>?' title='Must be in IRI format.'
+    {%- endif %}
+    {%- if 'flags' in property %} flags='{{ property["flags"] }}'
+    {%- endif %}
+    {%- if 'maxLength' in property %} maxlength='{{ property["maxLength"] }}'
+    {%- endif %}
+    {%- if 'lessThan' in property %} lessThan='{{ property["lessThan"] }}'
+    {%- endif %}
+    {%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property["lessThanOrEquals"] }}'
+    {%- endif %}
+    {%- if 'hasValue' in property %} value='{{ property["hasValue"] }}'
+    {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+    {%- else %} value=''{%- endif %}
+    {%- if 'equals' in property %} data-equalTo='{{ property["equals"] }}'
+    {%- endif %}
+    {%- if 'disjoint' in property %} data-notEqualTo='{{ property["disjoint"] }}'
+    {%- endif %}
+    {%- if disabled==True %} disabled
+    {%- endif %}
+    {%- if hidden==True %} hidden
+    {%- endif %}/>
 {%- endif %}
-{%- if 'flags' in property %} flags='{{ property["flags"] }}'
-{%- endif %}
-{%- if 'maxLength' in property %} maxlength='{{ property["maxLength"] }}'
-{%- endif %}
-{%- if 'lessThan' in property %} lessThan='{{ property["lessThan"] }}'
-{%- endif %}
-{%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property["lessThanOrEquals"] }}'
-{%- endif %}
-{%- if 'hasValue' in property %} value='{{ property["hasValue"] }}'
-{%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
-{%- else %} value=''{%- endif %}
-{%- if 'equals' in property %} data-equalTo='{{ property["equals"] }}'
-{%- endif %}
-{%- if 'disjoint' in property %} data-notEqualTo='{{ property["disjoint"] }}'
-{%- endif %}
-{%- if disabled==True %} disabled
-{%- endif %}
-{%- if hidden==True %} hidden
-{%- endif %}/>
