--- a/form-generator/rendering/input_field.html
+++ b/form-generator/rendering/input_field.html
@@ -36,7 +36,7 @@
     {%- if "hasValue" in property %}-0
     {%- endif %}'
     {%- if property['path'] == URIs['EMAIL'] %} type='email'
-        {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'
+        {%- if 'pattern' in property %} data-pattern='{{ property["pattern"] }}'
         {%- endif %}
         {%- if 'flags' in property %} flags='{{ property["flags"] }}'
         {%- endif %}
@@ -53,7 +53,7 @@
         {%- else %} value=''
         {%- endif %}
     {%- elif property['path'] == URIs['PHONE_NUMBER'] %} type='tel'
-        {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'
+        {%- if 'pattern' in property %} data-pattern='{{ property["pattern"] }}'
         {%- endif %}
         {%- if 'flags' in property %} flags='{{ property["flags"] }}'
         {%- endif %}
@@ -116,7 +116,7 @@
             {%- endif %}
         {%- endif %}
     {%- else %} type='text'
-        {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'
+        {%- if 'pattern' in property %} data-pattern='{{ property["pattern"] }}'
         {%- endif %}
         {%- if 'flags' in property %} flags='{{ property["flags"] }}'
         {%- endif %}
