--- a/form-generator/rendering/custom_property.html
+++ b/form-generator/rendering/custom_property.html
@@ -2,25 +2,20 @@
     <div class='template' hidden>
         <div>
             <div>
-                <div><label>Predicate </label></div>
-                <input type='radio' name='NodeKind Predicate CustomProperty' value='IRI' disabled='disabled'>Enter as IRI
-                <input type='radio' name='NodeKind Predicate CustomProperty' value='Literal' disabled='disabled'>Enter as string
-                <div hidden class='nodeKindOption nodeKindOption-IRI'>
-                    <input name='Predicate CustomProperty' type='text' pattern='<?\w+:(\/?\/?)[^\s]+>?' disabled='disabled'/>
-                </div>
-                <div hidden class='nodeKindOption nodeKindOption-Literal'>
-                    <input name='Predicate CustomProperty' type='text' disabled/>
-                </div>
+                <div><label>Predicate</label></div>
+                <div><i>Please enter as an IRI.</i></div>
+                <input name='Predicate CustomProperty' type='text' pattern='<?\w+:(\/?\/?)[^\s]+>?' disabled/>
             </div>
             <div>
-                <div><label>Object </label></div>
-                <input type='radio' name='NodeKind Object CustomProperty' value='IRI' disabled='disabled'>Enter as IRI
-                <input type='radio' name='NodeKind Object CustomProperty' value='Literal' disabled='disabled'>Enter as string
-                <div hidden class='nodeKindOption nodeKindOption-IRI'>
-                    <input name='Object CustomProperty' type='text' pattern='<?\w+:(\/?\/?)[^\s]+>?' disabled='disabled'/>
-                </div>
-                <div hidden class='nodeKindOption nodeKindOption-Literal'>
-                    <input name='Object CustomProperty' type='text' disabled/>
+                <div><label>Object</label></div>
+                <input name='Object CustomProperty' type='text' disabled/>
+                <div>
+                    Enter as...
+                    <select name='Object Type CustomProperty'>
+                        <option value='IRI'>IRI</option>
+                        <option value='String'>String</option>
+                        <option value='Boolean'>Boolean</option>
+                    </select>
                 </div>
             </div>
         </div>
