lack of a prefill no longer breaks the form updated tests

--- a/shaclform/rendering/base.html
+++ b/shaclform/rendering/base.html
@@ -25,3 +25,6 @@
 </fieldset>
 {%- endif %}
 {{ '{% endblock %}' }}
+{{ '{% block prefill %}' }}
+{{ '<script id="prefill" type="application/json">{% if prefill %}{{ prefill|tojson|safe }}{% endif %}</script>' }}
+{{ '{% endblock %}' }}
