--- a/tests/expected_results/empty_shape.html
+++ b/tests/expected_results/empty_shape.html
@@ -30,3 +30,6 @@
     </div>
 </fieldset>
 {% endblock %}
+{% block prefill %}
+<script id="prefill" type="application/json">{% if prefill %}{{ prefill|tojson|safe }}{% endif %}</script>
+{% endblock %}
